deepdive/k8s/service-seethru.yaml
apiVersion: v1
kind: Service
metadata:
  name: seethru-frontend
  namespace: deepdive
  labels:
    app: seethru
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: seethru
