deepdive/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepdive-api
  namespace: deepdive
  labels:
    app: deepdive
spec:
  selector:
    app: deepdive
  ports:
    - protocol: TCP
      port: 8000
      targetPort: http
  type: ClusterIP
